# hopper

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  codecov.yml
benches/: mpsc_snd_rcv.rs  stdlib_comparison.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzzers/: basic_fuzz.rs
in/: basic
resources/: afl_crashes.txt
resources/afl/: runner.rs
src/: common.rs  deque.rs  lib.rs  main.rs  private.rs  receiver.rs  sender.rs
tests/: afl_crashes.rs  exact_return.rs
