[package]
authors = ["Brian L. Troutwine <blt@postmates.com>"]
description = "an unbounded mpsc with bounded memory"
keywords = ["channel", "bounded", "mpsc", "asynchronous"]
license = "MIT"
name = "hopper"
readme = "README.md"
repository = "https://github.com/postmates/hopper"
version = "0.4.0-pre"

[dev-dependencies]
quickcheck = "0.6"
tempdir = "0.3"
criterion = "0.2.0"

[dependencies]
bincode = "0.9"
byteorder = "1.2"
flate2 = "1.0"
serde = "1.0"

[[bench]]
name = "stdlib_comparison"
harness = false