[package]
authors = ["Brian L. Troutwine <blt@postmates.com>"]
description = "an unbounded mpsc with bounded memory"
license = "MIT"
name = "hopper"
readme = "README.md"
repository = "https://github.com/postmates/hopper"
homepage = "https://github.com/postmates/hopper"
documentation = "https://docs.rs/hopper"
version = "0.4.2"
keywords = ["mpsc", "channel", "message", "bounded-memory"]
categories = ["asynchronous", "concurrency"]

[dev-dependencies]
quickcheck = "0.6"
tempdir = "0.3"
criterion = "0.2.0"

[dependencies]
bincode = "1.0"
byteorder = "1.2"
flate2 = "1.0"
serde = "1.0"

[[bench]]
name = "stdlib_comparison"
harness = false
